dark mode finished, more work on fixing api connection

--- a/Mission4/src/App.css
+++ b/Mission4/src/App.css
@@ -1,9 +1,9 @@
-body {
+/* body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
   background-color: #f4f4f9;
-}
+} */
 
 /* #root {
   max-width: 1280px;
